--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "media-chrome": "^4.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.27.0",
+    "react-spinners": "^0.14.1",
     "spotify-web-api-node": "^5.0.2",
     "swiper": "^11.1.14"
   },
